assigned userids in conversion to project entity, and tracked some missing files